2006-02-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/basic-notation.itely (Ties): document \repeatTie.

	* Documentation/topdocs/NEWS.tely (Top): document \repeatTie.

	* scm/define-music-types.scm (music-descriptions): add RepeatTieEvent

	* lily/repeat-tie-engraver.cc (acknowledge_note_head): new file. cut & paste
	froum Laissez_vibrer_engraver.

	* ly/declarations-init.ly (repeatTie): add \repeatTie

	* scm/define-grobs.scm (all-grob-descriptions): add RepeatTie, RepeatTieColumn

	* scm/define-grob-properties.scm (all-user-grob-properties): add
	head-direction property.

	* lily/tie-formatting-problem.cc (from_semi_ties): rename from
	from_lv_ties. Take head direction argument.

	* lily/semi-tie-column.cc: rename from
	laissez-vibrer-tie-column.cc. Rename class too.

	* lily/semi-tie.cc: rename from laissez-vibrer-tie.cc. Rename
	class too.

	* lily/paper-score.cc (find_break_indices): move from Break_algorithm.

	* lily/break-algorithm.cc (find_break_indices): remove linewidth <
	0 case.
	(find_breaks): idem.

2006-02-21  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/advanced-notation.itely: fixed make-moment]
	example.

	* Documentation/user/basic-notation.itely: more clarification to
	transpose.

2006-02-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/constrained-breaking.hh (class
	Constrained_breaking): new file.

	* lily/constrained-breaking.cc (resize): new file.

	* lily/gourlay-breaking.cc (do_solve): ragged-last iso raggedlast

	* Documentation/user/advanced-notation.itely (Clusters): insert
	end ignore too.

	* lily/tie-column.cc (calc_positioning_done): support for
	tie-score debugging

	* lily/tie-formatting-problem.cc
	(generate_extremal_tie_variations): factor out.
	(score_ties_configuration): annotate all tie 
	(print_ties_configuration): new routine.
	(generate_configuration): nudge extremal ties outside of the head
	Y extents.
	(score_ties_configuration): oops. convert to staff-space before